v0.7.0 RELEASE
==========
[Dock]: Initial implementation of docking.
[Tab]: Initial implementation of a container holding Window instances with tabs for each.

BUGS
==========
[Combo Box]: Selectable text not expanding to full width of window.
[File Dialog]: Excess right border.
[File System][Mac]: 'Unknown primary or operator' error message.
[List Box]: View transform pops while parent window is resizing when scroll is in non-zero position.
[List Box]: Region size not reset when list items change.
[List Box]: Window not properly auto-sized.
[Scroll Bar]: Color flicker when clicking and releasing on scroll bar.
[Tooltip]: Gains focus when displayed. Focus should not be allowed.
[Tree]: View transform not correct with content size. Content size may be incorrect.
[Window]: Clamp window moving to viewport.

TODO
==========
[Animation]: Initial animation support.
[API]: Re-organize functions in categories and update comment.
[API]: Get/Set cursor padding.
[Column]: Investigate moving Column rendering to its own draw channel within an active batch to reduce scissor calls.
[Column]: Move separator with mouse.
Combo Box: Easy API with table of possible values.
Context Menu: Investigate checking hot item and last item of window.
Controls: Convert all window bounds check to use region.
[Date Time]: Initial implementation for a date/time control.
Dialog: Function to close all dialog boxes.
Dialog: Modal/Non-modal dialogs.
[Documentation]: Command-line option to just dump all functions listed in API table.
[Error]: Dialog that shows any error messages.
[Error]: Show messages for deprecated API.
[Graph]: Initial line graph implementation.
[Input]: Drag select word versus character.
[Input]: Auto-grow control with MulitLine.
[Input]: Range highlight using start and end tokens.
[Keyboard]: Option to specify key as scan code.
License: Show license for Kenney.nl assets.
Main Menu Bar: Assert if called within a window context.
[Menu]: Radio button like menu items.